# Rust_frontend_presentation

./: README.md
js-wasm-integration/: .gitignore  Cargo.toml  README.md  index.html  main.js
js-wasm-integration/src/: lib.rs
yew-app/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
yew-app/src/: app.rs  lib.rs  shared.rs  widget.rs
yew-app/src/api/: httpbin_org.rs  mod.rs
yew-app/src/app/: app.rs
yew-app/src/features/: input.rs
yew-app/src/js_integration/: fibonacci.js  js_integration.rs  mod.rs  rs_fibonacci.rs
yew-app/src/processes/: switch.rs
yew-app/src/shared/: shared.rs
yew-app/src/widget/: fibonacci.rs  finonacci.rs  form.rs  header.rs  mod.rs
yew-app/src/widget/fibonacci/: js_integration.rs
yew-app/src/widget/fibonacci/js_integration/: js_fibonacci.rs
yew-app/src/widget/finonacci/: finonacci.rs  mod.rs
yew-app/src/widget/finonacci/js_integration/: hellow_world.js  js_integration.rs
yew-app/src/widget/form/: form.rs  mod.rs
yew-app/src/widget/form/api/: httpbin_org.rs
