[package]
name = "yew_app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "csr_app"

[dependencies]
gloo-console = "0.3.0"
gloo-net = {version = "0.6.0", features = ["json"]}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = {version = "0.3.70", features = ["HtmlInputElement"]}
yew = {version = "0.21", features = ["csr"]}
yew-router = "0.18.0"
chrono = "0.4.38"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
